--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>----タイトル----</title>
+<title>borderlibe</title>
 <link rel="stylesheet" href="style.css" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:400,700" rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
 <!-- ▼ヘッダ▼ -->
 <header>
 <div id="header-inner">
-<h1 class="index">Site Name</h1>
+<h1 class="index">pearlocean</h1>
 </div>
 </header><!-- ▲ヘッダ▲ -->
 
@@ -25,8 +25,10 @@
 <div id="column">
 
 <p>
-lorem ipsum。<br>
-lorem ipsum <br>
+welcome to <b>pearlocean<b>, to my corner of the internet. <br>
+<img src="https://64.media.tumblr.com/d76e6de536dea35e1bb8e08681126e00/a6d94ecd4183f7da-07/s250x400/bb6850e10ffb62a35236f5fcd7ee2f4bc0089830.gifv"  class="centreimg">
+<br>
+enjoy your stay <3
 </p>
 
 <br><a href="index2.html"><img src="https://media.discordapp.net/attachments/880054015692517449/1005899498838569143/banner200.gif" width="200" height="40">Enter</a>
