--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <p>
 welcome to <b>pearlocean</b>, to my corner of the internet. 
-<img src="https://64.media.tumblr.com/d76e6de536dea35e1bb8e08681126e00/a6d94ecd4183f7da-07/s250x400/bb6850e10ffb62a35236f5fcd7ee2f4bc0089830.gifv"  class="centre">
+<img src="https://64.media.tumblr.com/d76e6de536dea35e1bb8e08681126e00/a6d94ecd4183f7da-07/s250x400/bb6850e10ffb62a35236f5fcd7ee2f4bc0089830.gifv"  class="centerimg">
 <br>
 enjoy your stay <3
 </p>
