--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 <!-- ▼メイン▼ -->
 <div id="contents">
-<div id="column">
+
 
 <p>
 welcome to <b>pearlocean</b>, to my corner of the internet. 
-<img src="https://64.media.tumblr.com/d76e6de536dea35e1bb8e08681126e00/a6d94ecd4183f7da-07/s250x400/bb6850e10ffb62a35236f5fcd7ee2f4bc0089830.gifv"  class="centerimg">
+<img src="https://media.discordapp.net/attachments/880054015692517449/992732084768624640/94709bc30e008cc38e41d86cb21bc3a7-removebg-preview.png"  class="centerimg">
 <br>
 enjoy your stay <3
 </p>
