--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
 
 <!-- ▼メイン▼ -->
 <div id="contents">
-
-
+<div id="column">
 <p>
 welcome to <b>pearlocean</b>, to my corner of the internet. 
-<img src="https://media.discordapp.net/attachments/880054015692517449/992732084768624640/94709bc30e008cc38e41d86cb21bc3a7-removebg-preview.png"  class="centerimg">
+<img src="https://i9.glitter-graphics.org/pub/493/493029rgotud3bvq.gif"  class="centerimg">
 <br>
 enjoy your stay <3
 </p>
