--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="column">
 <p>
 welcome to <b>pearlocean</b>, to my corner of the internet. 
-<img src="https://i9.glitter-graphics.org/pub/493/493029rgotud3bvq.gif"  class="centerimg">
+<img src="https://64.media.tumblr.com/4a466d05dcdb3d970b6e14f957940a8d/a6d94ecd4183f7da-07/s250x400/6e588bd28a99bf30e18b1b6d3611a80d01722de4.gifv"  class="centerimg">
 <br>
 enjoy your stay <3
 </p>
