--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@
 <!-- ▼メイン▼ -->
 <div id="contents">
 <div id="column">
-<p>
-welcome to <b>pearlocean</b>, to my corner of the internet. 
-</p>
-<p>
+
+welcome to <b>pearlocean</b>, to my corner of the internet. <br>
 enjoy your stay <3
-                   </p>
+                 
 
 
 <br><a href="index2.html"><img src="https://media.discordapp.net/attachments/880054015692517449/1005899498838569143/banner200.gif" width="200" height="40">Enter</a>
