--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 <header>
 <div id="header-inner">
 <!-- サイト名 -->
-<h1><a href="index2.html">SiteName,responsive_n020</a></h1>
+<h1><a href="index2.html">pearlocean</a></h1>
 </div>
 </header><!-- ▲ヘッダ▲ -->
 
@@ -34,32 +34,21 @@
 <article>
 <!-- ▼右側の内容▼ -->
 
-<h2>First</h2>
+<h2>what is this website?</h2>
 
-テンプレート番号：n-020<br>レスポンシブ<br><br>
-h1,h2,メニュー、designedにgoogleフォント<a href="https://fonts.google.com/specimen/Arima+Madurai" target="_blank">「Arima Madurai」</a>を使用しています。<br>
-英数字だとかわいいんですけど、
-日本語だと表示されませんので、日本語サイト名さんや、使用したくない場合は、各htmlの上の方にある<br>
-&lt;link href=&quot;https://fonts.googleapis.com/css?family=Arima+Maduraiy&quot;
-rel=&quot;stylesheet&quot;&gt; <br>
-を削除してください。<br>
-style.cssのh1だけを消す、とかもアリです。
-
-<h2>はじめに</h2>
+<b>pearlocean<b> is my home on the internet, an online journal/writing blog of sorts. here you will find my musings and writing on various subjects, including my hobbies, as well as borderline thoughts. ever since i got diagnosed with bpd, i find that laying down my thoughts helps me understand my brain more. and i also love talking about my various interests in hopes that someone else would pick them up too! hence this website. 
+<br>
+<h2>introduction</h2>
 <p>
-当サイトは○○サイトです。サイト内の画像・文章の二次利用はご遠慮願います。みたいな何かを書いたり書かなかったり。<br>
-<a href="#">テキストリンク</a>はこうなりまして、<em>文章を強調</em>したり<span class="marker">マーカー風文字</span>にしたりするとこうなりますのです。
+i'm just an eighteen year old girl with a penchant for web design and cutesy things in general. you can refer to me as lain, which is an alias. <br>
+<span class="marker">other things i love:</span>pink, shoegaze and dreampop music, reading books, watching films and tv shows, and animanga. i also love collecting things like anime figures, manga and kpop photocards (sorry for being embarrassing.)
 </p>
 
-<h3>更新履歴</h3>
+<h3>update log</h3>
 
 <dl>
-<dt>20xx.04.01</dt>
-<dd>小説更新</dd>
-<dt>20xx.06.01</dt>
-<dd>小説更新</dd>
-<dt>20xx.10.20</dt>
-<dd>小説更新</dd>
+<dt>2022.08.13</dt>
+<dd>first ever update</dd>
 </dl>
 
 <!-- ▲右側の内容▲ -->
